# rust-parcel-template

./: .travis.yml  README.md  index.html  package-lock.json  package.json
.bin/: create-rust-parcel.js
.github/: dependabot.yml
crate/: Cargo.toml
crate/src/: lib.rs
js/: index.js
